# rust-polkadot-challenges

./: Cargo.toml  README.md
backup_advanced/: challenge_01.md  challenge_02.md  challenge_03.md  challenge_04.md  challenge_05.md  challenge_06.md  challenge_07.md  challenge_08.md  challenge_09.md  challenge_10.md  challenge_11.md  challenge_12.md
src/: main.rs
src/advanced/: challenge_01.md  challenge_01.rs  challenge_02.md  challenge_02.rs  challenge_03.md  challenge_03.rs  challenge_04.md  challenge_04.rs  challenge_05.md  challenge_05.rs  challenge_06.md  challenge_06.rs  challenge_07.md  challenge_07.rs  challenge_08.md  challenge_08.rs  challenge_09.md  challenge_09.rs  challenge_10.md  challenge_10.rs  challenge_11.md  challenge_11.rs  challenge_12.md  challenge_12.rs  challenge_13 - BONUS.md  mod.rs
src/begginer/: challenge_01.rs  challenge_02.rs  challenge_03.rs  challenge_04.rs  challenge_05.rs  challenge_06.rs  challenge_07.rs  mod.rs
src/beginner/: challenge_00.md  challenge_01.md  challenge_01.rs  challenge_02.md  challenge_02.rs  challenge_03.md  challenge_03.rs  challenge_04.md  challenge_04.rs  challenge_05.md  challenge_05.rs  challenge_06.md  challenge_06.rs  challenge_07.md  challenge_07.rs  challenge_08.md  challenge_08.rs  mod.rs
src/medium/: challenge_01.md  challenge_01.rs  challenge_02.md  challenge_02.rs  challenge_03.md  challenge_03.rs  challenge_04.md  challenge_04.rs  challenge_05.md  challenge_05.rs  challenge_06.md  challenge_06.rs  challenge_07.md  challenge_07.rs  challenge_08.md  challenge_08.rs  challenge_09.md  challenge_09.rs  (+3 more)
